/*! \page PageChanges Changelog of IsoAgLib


INCLUDE_mainHeaderWithNavbar.txt_INCLUDE

\section IndexChanges Changes

\subsection Change_K 1.2.1 to 1.2.2(unofficial)

  - support for proc2iso XML schema: new mandatory parameter -s=xxx.xsd for personalized path to xsd-file (see proc2iso --help).
    former only -s with a default path

\subsection Change_K 1.2.0 to 1.2.1

	- fixes for Win32 RS232 HAL
	- added the hook function eventVtStatusMsg() that gets called immediately after recognizing an incoming VT status message
	- fix compilation problems for cases with more than one protocoll instance
	- project generation can now selectively incorporate tractor information subgroup classes, enhance the tractor information bases classes
	- implemented possibility to change ISONAME of a device during runtime for DeviceDescription upload to TaskController
	- Added explicit MultiPacket enabling in update_makefile.sh. Added getLinearBuffer function to StreamLinear_c
	- include devpropertyhandler_c (DeviceDescription handling) only in projects which use LOCAL Process Data
	- different font used for outputstrings in buttons to enable different scaling factors depending on the size of the button
	- iProcDataLocalSimpleSetpoint_c::init() and iProcDataLocalSimpleMeasure_c::init() bugfix
	- periodic SA request (about one minute period) for early detect of lost nodes on the BUS to get early cleanup of monitor list
	  ( this feature is only active, when the automatic deletion of stale ISO nodes is activated by #define CONFIG_ISO_ITEM_MAX_AGE > 0 )
	- Now supporting differentially scaled fontattributes in buttons
	- Changed Scaling to get more exact. removed 20bit fixpoint by factorM and factorD
	- Softkey child object positioning revised
	- fix useage of CAN last message object which is used to receive CAN messages while the normal message objects are reconfigured